Update title and styling in index.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RITZ99 - Sedang Dialihkan...</title>
+  <title>Sedang Dialihkan ke RITZ99...</title>
+
   <style>
     body {
       margin: 0;
-      background-color: #1c1c1c;
+      background-color: #1b1b1b;
       color: #e0e0e0;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: "Segoe UI", sans-serif;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -18,13 +19,55 @@
       text-align: center;
     }
     .logo {
+      width: 280px;
       max-width: 90%;
-      width: 320px;
       height: auto;
       object-fit: contain;
-      filter: drop-shadow(0 0 8px #00ff4c);
-      animation: pulse 1.8s infinite;
+      filter: drop-shadow(0 0 8px #00ff66);
+      animation: pulse 2s infinite;
     }
     @keyframes pulse {
       0% { transform: scale(1); opacity: 0.9; }
-      50% { transform:
+      50% { transform: scale(1.05); opacity: 1; }
+      100% { transform: scale(1); opacity: 0.9; }
+    }
+    p {
+      margin-top: 20px;
+      font-size: 18px;
+      color: #bfbfbf;
+    }
+  </style>
+
+  <!-- 🟦 Meta Pixel Code -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1704160510236989'); // 你的 Pixel ID
+    fbq('track', 'PageView');
+  </script>
+  <noscript>
+    <img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1704160510236989&ev=PageView&noscript=1"/>
+  </noscript>
+  <!-- End Meta Pixel Code -->
+</head>
+
+<body>
+  <img class="logo" src="https://i.ibb.co/pv8WzgfV/logo.png" alt="RITZ99 Logo">
+  <p>Sedang dialihkan ke laman rasmi RITZ99...</p>
+
+  <script>
+    // 追踪点击事件 + 3秒后自动跳转
+    setTimeout(function() {
+      fbq('track', 'ViewContent');
+      window.location.href = "https://ritz99.net/RFRITZ99JKF1";
+    }, 3000);
+  </script>
+</body>
+</html>
