--- a/index.html
+++ b/index.html
@@ -3,82 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sedang Dialihkan ke RITZ99...</title>
+  <title>Sedang dialihkan...</title>
 
-  <style>
-    body {
-      margin: 0;
-      background-color: #000;
-      color: #e0e0e0;
-      font-family: "Segoe UI", sans-serif;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
-    }
-
-    .logo-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      max-width: 420px;
-      padding: 20px;
-    }
-
-    .logo {
-      width: 100%;
-      height: auto;
-      object-fit: contain;
-      filter: drop-shadow(0 0 10px #00ff80);
-      animation: glow 3s infinite ease-in-out;
-    }
-
-    @keyframes glow {
-      0% { opacity: 0.9; filter: drop-shadow(0 0 6px #00ff80); }
-      50% { opacity: 1; filter: drop-shadow(0 0 15px #00ff80); }
-      100% { opacity: 0.9; filter: drop-shadow(0 0 6px #00ff80); }
-    }
-
-    p {
-      margin-top: 25px;
-      font-size: 18px;
-      color: #bfbfbf;
-    }
-  </style>
-
-  <!-- 🟦 Meta Pixel Code -->
+  <!-- Meta Pixel Code -->
   <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '1704160510236989');
-    fbq('track', 'PageView');
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '1704160510236989');
+  fbq('track', 'PageView');
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=1704160510236989&ev=PageView&noscript=1"/>
+    src="https://www.facebook.com/tr?id=1704160510236989&ev=PageView&noscript=1"/>
   </noscript>
   <!-- End Meta Pixel Code -->
-</head>
 
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: "Poppins", sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
+    img {
+      width: 140px;
+      height: auto;
+      margin-bottom: 20px;
+    }
+    h2 {
+      font-size: 20px;
+      font-weight: 500;
+    }
+  </style>
+</head>
 <body>
-  <div class="logo-container">
-    <img class="logo" src="https://i.ibb.co/pv8WzgfV/logo.png" alt="RITZ99 Logo">
-  </div>
-  <p>Sedang dialihkan ke laman rasmi RITZ99...</p>
+  <img src="https://i.ibb.co/pv8WzgfV/logo.png" alt="RITZ99 Logo">
+  <h2>Sedang dialihkan ke RITZ99<br>150% Welcome Bonus...</h2>
 
   <script>
-    // 延迟3秒自动跳转并记录Pixel事件
-    setTimeout(function() {
+    setTimeout(() => {
       fbq('track', 'ViewContent');
+      fbq('track', 'Lead');
       window.location.href = "https://ritz99.net/RFRITZ99JKF1";
     }, 3000);
   </script>
