Modify Meta Pixel comment and image styles
Updated Meta Pixel comment and adjusted image properties.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sedang dialihkan...</title>
 
-  <!-- Meta Pixel Code -->
+  <!-- 🟩 Meta Pixel Code -->
   <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -37,9 +37,10 @@
       text-align: center;
     }
     img {
-      width: 140px;
+      width: 150px;
       height: auto;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
+      object-fit: contain;
     }
     h2 {
       font-size: 20px;
@@ -48,7 +49,7 @@
   </style>
 </head>
 <body>
-  <img src="https://i.ibb.co/pv8WzgfV/logo.png" alt="RITZ99 Logo">
+  <img src="https://i.ibb.co/9dab9002-8ee6-4f4a-96f8-63fd68d33ea3.png" alt="RITZ99 Logo">
   <h2>Sedang dialihkan ke RITZ99<br>150% Welcome Bonus...</h2>
 
   <script>
